--- a/students/index.html
+++ b/students/index.html
@@ -24,84 +24,38 @@
 <h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
   <ul>
     <li>
-      <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
+       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxph_JWN6dwJBRKikR-l_YVHtS91XDMDPJDLWkB5zA07pPVg/viewform" target="_blank">5 Shot Form</a>
     </li>
     <li>
-      <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-dunkers%2Flessons&branch=main&subPath=hoop-data.ipynb&depth=1" target="_blank">Hoops Notebook</a>
+      <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-dunkers%2Flessons&branch=main&subPath=hoop-data-wteam.ipynb&depth=1" target="_blank">Hoops Notebook</a>
     </li>
     <li>
       <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-dunkers%2Flessons&branch=main&subPath=labyrinths/mini-basketball/mini-basketball.ipynb&depth=1" target="_blank">Mini Basketball Labyrinth</a>
     </li>
-    <li>
-      <a href="https://github.com/Data-Dunkers/lessons/blob/main/README.md" target="_blank">Additional Lessons Links</a>
-    </li>
   </ul>
+
   <hr>
-<h3>Demonstrations</h3>
+<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://hub.callysto.ca" target="_blank">Alternative Links</a></h2>
+Only use these links if instructed to do so.
   <ul>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-internal.ipynb" target="_blank">Data from Internal</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-csv.ipynb" target="_blank">Data from CSV</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-webpage.ipynb" target="_blank">Data from Webpage</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-google-sheet.ipynb" target="_blank">Data from Google Sheet</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-excel.ipynb" target="_blank">Data from Excel</a></li>
-<hr>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/bar-graphs.ipynb" target="_blank">Bar Charts</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/scatter-plots.ipynb" target="_blank">Scatter Plots</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/pie-charts.ipynb" target="_blank">Pie Charts</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/histograms.ipynb" target="_blank">Histograms</a></li>
-<hr>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/columns.ipynb" target="_blank">Columns</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/new-columns.ipynb" target="_blank">Making New Columns</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/filtering-data.ipynb" target="_blank">Filtering Data</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/sorting-data.ipynb" target="_blank">Sorting Data</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/statistics.ipynb" target="_blank">Statistics</a></li>
-</ul>
-<a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fbasketball%2Fbasketball.ipynb" target="_blank">Second Basketball Labyrinth</a><br>
-<a href="https://colab.research.google.com/github/PS43Foundation/data-dunkers/blob/main/notebooks/hackathon/pascal-siakam-stats-intro.ipynb" target="_blank">Siakam Stats Challenge</a><br>
-<hr>
-<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://colab.research.google.com/" target="_blank">Google Colab Links</a></h2>
-<ul>
-  <li><a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb#scrollTo=iWShoEWXvVqw" target="_blank">Hoops Notebook</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a></li>
-</ul>
+    <li>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fhoops_notebook_dd6.ipynb" target="_blank">Hoops Notebook (Jupyterlite)</a>
+    </li>
+      <li>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini-Basketball Labyrinth  (Jupyterlite)</a>
+    </li>    
+ <li>
+      <a href="https://labyrinth.datadunkers.ca/mini-basketball/" target="_blank">Mini-Basketball Labyrinth (Website)</a>
+    </li>
+
+      <li>
+      <a href="https://docs.google.com/document/d/1ick9Jgp3CHC-tT2vAGjJidpgPJw2Fwf7w-e6y3O8OE0/edit?usp=sharing" target="_blank">Additional Quick Links</a>
+    </li>
   
-
-<hr>
-<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://datadunkers.ca/jupyterlite/lab/index.html" target="_blank">Jupyterlite Links</a></h2>
-  <ul>
-    <li>
-      <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
-    </li>
-    <li>
-      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Flets_plot_hoop_data_5.ipynb" target="_blank">Hoops Notebook</a>
-    </li>
-    <li>
-      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a>
-    </li>
   </ul>
-  <hr>
-  <h3>Demonstrations</h3>
-  <ul>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-internal.ipynb" target="_blank">Data from Internal</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-csv.ipynb" target="_blank">Data from CSV</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-webpage.ipynb" target="_blank">Data from Webpage</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-google-sheet.ipynb" target="_blank">Data from Google Sheet</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-excel.ipynb" target="_blank">Data from Excel</a></li>
+   
 <hr>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fbar-graphs.ipynb" target="_blank">Bar Charts</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fscatter-plots.ipynb" target="_blank">Scatter Plots</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fpie-charts.ipynb" target="_blank">Pie Charts</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fhistograms.ipynb" target="_blank">Histograms</a></li>
-<hr>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fcolumns.ipynb" target="_blank">Columns</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fnew-columns.ipynb" target="_blank">Making New Columns</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Ffiltering-data.ipynb" target="_blank">Filtering Data</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fsorting-data.ipynb" target="_blank">Sorting Data</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fstatistics.ipynb" target="_blank">Statistics</a></li>
 
-</ul>
-<hr>
   <a href="https://docs.google.com/document/d/1HpYUw6PQhz77wvXV1h8U-yv9aj-eHHPjQlVoZ6P8O2M/">Additional Links</a>: Changed for each Data Dunker Session.
 
 </p>
