--- a/ips/index.html
+++ b/ips/index.html
@@ -21,7 +21,7 @@
 <h2 class="hero-heading">Welcome to <span class="highlight-blue"> Data Dunkers Program</span></h2>  
   
 <p class="paragraph"> 
-<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
+<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://hub.callysto.ca" target="_blank">Progam Links</a></h2>
   <ul>
     <li>
        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeH6jCUlunkaZCKiVZtOQ5D-aDG8Elgfr9wIRtBMZBN2BFhQg/viewform" target="_blank">Data Collection Form</a>
@@ -30,7 +30,7 @@
       <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2FData-Dunkers%2Fnotebooks&branch=main&subPath=Data_Dunkers_Detailed_Form_Analysis_-_STEM_Nov_11_IPS.ipynb&depth=1" target="_blank">Data Analysis Notebook</a>
     </li>
     <li>
-      <a href="https://hhttps://labyrinth.datadunkers.ca/mini-basketball/" target="_blank">Basketball Labyrinth</a> (Code to Start= WNBA)
+      <a href="https://labyrinth.datadunkers.ca/mini-basketball/" target="_blank">Basketball Labyrinth</a> (Code to Start= WNBA)
     </li>
      <li>
       <a href="https://datadunkers.ca/students/DD-data-ai-mindmap.html" target="_blank">Data in Careers Explorer</a>
